[package]
name = "keybroker-client"
version = "0.1.0"
edition = "2021"
authors = ["Veraison Project Contributors"]
description = "Rust client library for the demo keybroker."
license = "Apache-2.0"
repository = "https://github.com/veraison/keybroker-demo"
readme = "README.md"
keywords = ["security", "service", "attestation"]
categories = ["cryptography", "hardware-support"]

[dependencies]
keybroker-common = { path = "../keybroker-common" }
base64 = "0.22.1"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls", "blocking"] }
rsa = "0.9.6"
thiserror = "1.0"
tsm_report = { git = "https://github.com/veracruz-project/cca-utils-rs.git", rev = "cb88b76da722f2991365b159e3d575249dfbbe7d"}