[package]
name = "keybroker-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
base64 = "0.22.1"
thiserror = "1.0.63"
serde = "1.0.204"
rsa = "0.9.6"
sha2 = "0.10.8"
rand = "0.8.5"
clap = { version = "=4.3.24", features = ["derive", "std"] }
keybroker-common = { path = "../keybroker-common" }
veraison-apiclient = { git = "https://github.com/veraison/rust-apiclient.git" }
ear = { git = "https://github.com/veraison/rust-ear.git" }
