[package]
name = "keybroker-server"
version = "0.1.0"
edition = "2021"
authors = ["Veraison Project Contributors"]
description = "A simple web service that can provide keys and secrets in exchange for verifiable attestation tokens."
license = "Apache-2.0"
repository = "https://github.com/veraison/keybroker-demo"
readme = "README.md"
keywords = ["security", "service", "attestation"]
categories = ["cryptography", "hardware-support"]

[dependencies]
keybroker-common = { path = "../keybroker-common" }
actix-web.workspace = true
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
ear.workspace = true
log.workspace = true
phf.workspace = true
rand.workspace = true
regorus.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
stderrlog.workspace = true
thiserror.workspace = true
veraison-apiclient.workspace = true
